# reproducible-reports

./: .gitignore  .gitmodules  readme.md
1-main-option/: build.clj  readme.md  simple.html  whitespace.html
1-main-option/src/foo/: a.cljs  b.cljs  main.cljs
2-cljs-node-deps/: build.clj  package.json  readme.md
2-cljs-node-deps/src/foo/: main.cljs
3-electron-failed-to-load-resource/: index.html  package.json  readme.md
4-instaparse-perf/: .gitignore  build.clj  readme.md
4-instaparse-perf/src/insta_perf/: big.cljs  hello.cljs  small.cljs
5-electron-simple-fullscreen-no-dock/: dock.js  no_dock.js  package.json  readme.md
6-intellij-plugin-clojure/: readme.md
6-intellij-plugin-clojure/src/com/fooplugin/: HelloWorldAction.java
6-intellij-plugin-clojure/uberjar/: project.clj
6-intellij-plugin-clojure/uberjar/src/com/fooplugin/: core.clj
7-neon-backtrace-lines/: README.md  package.json
7-neon-backtrace-lines/native/: Cargo.toml
7-neon-backtrace-lines/native/a_panic/: Cargo.toml
7-neon-backtrace-lines/native/a_panic/src/: lib.rs
7-neon-backtrace-lines/native/src/: lib.rs
8-neon-roaring-rust26/: README.md  package.json
8-neon-roaring-rust26/native/: Cargo.toml
9-cljs-unicode-regex/: build.clj  readme.md
9-cljs-unicode-regex/src/repro/: main.cljs
